# urb-ffi

./: .gitignore  CMakeLists.txt  Makefile  README.md  index.js  package.json  urbc.h  urbccli.c
bindgen/: CMakeLists.txt  Makefile  README.md
bindgen/src/: main.cpp
bindings/lua/: Makefile  README.md  test_hello.lua  test_load.lua  urb_ffi.lua
bindings/lua/examples/: byvalue.c  byvalue.lua  callback.lua  hello.lua  manual_types.lua  memory.lua  memory_phase6.lua  sym_self.lua  test_module.lua  view.lua
bindings/lua/src/: urb_ffi_lua.c
bindings/node/: Makefile  README.md  binding.gyp  index.js
bindings/node/examples/: byvalue.c  byvalue.js  callback.js  hello.js  manual_types.js  memory.js  memory_phase6.js  memory_utils.js  meta_fields.js  smoke.js  sym_self.js  view.js
bindings/node/scripts/: build.js  libffi-config.js  test.js
bindings/node/src/: ffi_sig.c  ffi_sig.h  urb_ffi_napi.c
docs/: BYTECODE.md
include/: urb.h  urbc.h
include/urbc/: api.h  common.h  ffi_sig.h  format.h  loader.h  runtime.h
src/: urbc_api.c  urbc_ffi_sig.c  urbc_format.c  urbc_internal.h  urbc_loader.c  urbc_ops_core.c  urbc_ops_ffi.c  urbc_ops_mem.c  urbc_ops_schema.c  urbc_platform.c  urbc_runtime.c  urbc_schema.c
src/node/: Makefile
src/node/src/: disturb_napi.c
tools/: amalgamate.py  amalgamate.sh
